fixed the overlapping sections of sidebar

--- a/style.css
+++ b/style.css
@@ -141,7 +141,6 @@ color: #fff;
 /*padding-right: 20px;*/
 height: 50px;
 z-index: 2;
-
 display: flex;
 /*justify-content: space-between;*/
 }
@@ -154,12 +153,20 @@ text-align: center;
 flex-grow: 1;
 }
 
+.header {
+    position: fixed;
+    left: 0;
+    right: 0;
+    margin: auto;
+    z-index: 1;
+}
+
 
 /* ---------------------------------- everything below is for the hamburger menu ---------------------*/
 
 .toggler{
   /* ALWAYS KEEPING THE TOGGLER OR THE CHECKBOX ON TOP OF EVERYTHING :  */
-    z-index:2;
+    z-index:4;
     height: 50px;
     width: 50px;
     position: absolute;
@@ -171,6 +178,7 @@ flex-grow: 1;
 
 .hamburger{
     position: absolute;
+    z-index:3;
     top: 0;
     left: 0;
     height: 30px;
@@ -241,6 +249,7 @@ TOP AT -10PX ABOVE THE MIDDLE ONE AND BOTTOM ONE IS 10PX BELOW THE MIDDLE: */
     background: #5D697A;
     width: 0%;
     height: 100vh;
+    z-index: 2;
   
   /* APPLYING TRANSITION TO THE MENU :  */
   
